item tooltip and dependency value ui fixes
apply icon style to icon panel instead of the parent panel, fixes stretched image on dependency value panel

adjust size of dependency value icon based on feedback

increase z-index of item tooltip panel to prevent z-fighting

--- a/code/ui/DependencyValue.scss
+++ b/code/ui/DependencyValue.scss
@@ -8,8 +8,8 @@
         margin-right: 4px;
         box-shadow: 0px 0px 10px 1px rgba(255,0,0,0.1);
         border-radius: 2px;
-        width: 24px;
-        height: 24px;
+        width: 32px;
+        height: 32px;
     }
 
     .label {
