--- a/code/ui/ItemTooltip.scss
+++ b/code/ui/ItemTooltip.scss
@@ -12,6 +12,7 @@
     transform: translateX(-50%) translateY(-100%);
     left: 0px;
     top: 0px;
+    z-index: 10;
 
     .name {
         font-size: 20px;
